--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,18 @@
+@import url("https://fonts.googleapis.com/css?family=VT323|Amiri&display=swap");
+
 html {
-    background-color: #f5e6d7;
-    font-family: "Comic Sans MS";
-    background-image: url("binderpaper.png");
+    background: url("../img/IMG_1364.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    font-family: "VT323";
 }
 
 h1 {
   text-align: center;
-  font-family: "Courier New";
-  font-weight: bolder;
+  font-family: "VT323";
+  font-size: 80px;
 }
 
 h2 {
@@ -16,6 +21,7 @@ h2 {
 
 p {
     text-align: center;
+    font-size: 30px;
 }
 
 img {
@@ -33,10 +39,23 @@ div {
 button {
   background-color: #806855;
   color: white;
-  font-family: "Comic Sans MS";
+  font-family: "VT323";
   border-radius: 30px;
   border: none;
   padding: 15px;
+  font-size: 24px;
+  text-align: center;
+  box-shadow: 0 9px #999;
+}
+
+button:hover {
+  background-color: #A40000;
+}
+
+button:active {
+  background-color: #A40000;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
 
 button a {
