--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=VT323|Amiri&display=swap");
 
 html {
-    background: url("../img/IMG_1364.jpg") no-repeat center center fixed;
+    background: url("../img/IMG_1364.JPG") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
