--- a/story/css/story.css
+++ b/story/css/story.css
@@ -79,7 +79,7 @@ button a {
 
 #body {
   font-family: "VT323";
-  background: url("../img/IMG_1365.JPG") fixed;
+  background: url("../img/IMG_1365.jpg") fixed;
 }
 
 #story-text {
